<resources>
    <string name="app_name">PetCare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="story">Story</string>
    <string name="news">News</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign up</string>
    <string name="or_login_with">Or Login With</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="name">Name</string>
    <string name="other">Other</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>

    <string name="add_postingan">Share Your Story</string>
    <string name="logout">Logout</string> 
    <string name="add_post">Share Your Story</string> 
    <string name="add_story">Add Story</string>
    <string name="add_schedule">Add Schedule</string>

    <string name="confirm_changes">Confirm Changes</string>
    <string name="tab_text_1">All News</string>
    <string name="tab_text_2">Health</string>
    <string name="tab_text_3">Fun Facts</string>
    <string name="tab_text_4">Tips</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="latest_news">Latest News</string>
    <string name="no_news_found">No data found, try another keyword</string> 
    <string name="btn_upload_text">Upload</string>
    <string name="description_counter_text">0/100</string>
    <string name="description_hint">Type anything</string>
    <string name="btn_gallery_text">Select Photo</string>
    <string name="btn_camera_text">Camera</string>
    <string name="upload_success_text">upload success</string>
    <string name="description_max_char">max character for description is 100</string>
    <string name="max_char">/100</string>
    <string name="not_get_permission">Not getting camera permission</string>
    <string name="detail_title">Postingan</string>
    <string name="no_post_yet">No post yet</string>
    <string name="view_profile">View Profile</string>
    <string name="comment_text_toolbar">Comment</string>
    <string name="extra_subject_share"><![CDATA[Ada yang baru nihh ->]]></string>
    <string name="extra_body_share">Share post on PetCare App</string>
    <string name="detail_title">Postingan</string> 
    <string name="no_activity">Cheers! \n You have no activity in 1 week</string>
    <string name="today_schedule">Today Schedule</string>
    <string name="upcoming">Upcoming</string>
    <string name="check_all_shedule">Check All Shedule..</string>
    <string name="no_schedule">No Schedule</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="delete_schedule">Delete Schedule</string>
    <string name="empty_data_image">Empty Data Image</string>
    <string name="looks_like_you_don_t_have_any_schedule_yet">Looks like you don\'t have any schedule yet..</string>
    <string name="activity">Activity</string>
    <string name="activity_category">Activity Category</string>
    <string name="activity_description">Activity Description</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="remind_before">Remind Before</string>
    <string name="notes">Notes</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="description">Description</string>
    <string name="activity_name">Activity Name</string>
    <string name="another">Another</string>
    <string name="mapbox_token">pk.eyJ1IjoiZGFyZW5ubm4xMjMiLCJhIjoiY2xiN2p5eXl1MDgyMjNub2Y3dGJldmF5ayJ9.qJd7TsmIIbXdLTfKx4DelA</string>
    <string name="see_all_map">See All Map</string>
    <string name="no_permission">Not getting permission</string>
    <string name="nearby_pet_shop">Nearby Pet Shop</string>
    <string name="your_location">Your Location</string>
    <string name="pet_shop_near_you">Pet Shop Near You</string>
    <string name="location_not_found">Location is not found, Try Again</string>
    <string name="header_location_three_text">Press the floating button to see all the places at once on the map</string>
    <string name="empty_petshop_caution">There are no pet shop data near you</string>
    <string name="credit_location_text">Press the floating button to see all the places at once on the map</string>
    <string name="location_symbol">Location Symbol</string>
    <string name="pet_shop_name">Pet Shop Name</string>
    <string name="pet_shop_address">Pet Shop Address</string>
    <string name="style_map_error">Style parsing failed</string> 
</resources>