<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_story"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/story"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_baseline_newspaper_24"
        android:title="@string/news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_schedule"
        android:icon="@drawable/ic_baseline_schedule_24"
        android:title="@string/schedule"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>