<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.main.other.petshop.PetShopListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/pet_shop_header"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/nearby_pet_shop"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/header_location_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/header_location_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_location"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/map_in_list"
            app:layout_constraintTop_toBottomOf="@id/pet_shop_header"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map_in_list"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_location_one" />

        <TextView
            android:id="@+id/header_location_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pet_shop_near_you"
            android:layout_margin="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/header_location_three"
            app:layout_constraintTop_toBottomOf="@id/map_in_list"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/header_location_three"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/header_location_three_text"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/recycler_petShop"
            app:layout_constraintTop_toBottomOf="@id/header_location_two"
            app:layout_constraintStart_toStartOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_petShop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/credit_mapbox_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_location_three" />

        <ImageView
            android:id="@+id/image_petshop_empty"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            android:contentDescription="@string/empty_data_image"
            android:src="@drawable/empty_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_location_three" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/text_petshop_empty"
            android:visibility="gone"
            android:textStyle="bold"
            android:text="@string/empty_petshop_caution"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_petshop_empty" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_map"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:backgroundTint="?attr/colorPrimary"
            android:contentDescription="@string/see_all_map"
            android:src="@drawable/ic_baseline_map_24"
            app:layout_constraintBottom_toTopOf="@+id/recycler_petShop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_in_list" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/credit_mapbox_text"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/credit_location_text"
            android:textSize="13sp"
            android:textAlignment="center"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_petShop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>